fix: remove scrollbar

--- a/style/style.css
+++ b/style/style.css
@@ -86,6 +86,8 @@ main {
   flex-direction: column;
   gap: 1rem;
   overflow-y: auto;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
   max-height: calc(100vh - 320px);
   padding: 2.2rem 2rem 2rem 2rem;
 
@@ -100,6 +102,10 @@ main {
   -webkit-mask-size: 100% 100%;
   mask-size: 100% 100%;
   mask-repeat: no-repeat;
+}
+
+#games::-webkit-scrollbar {
+  display: none;
 }
 
 a.game {
